# sql-for-python-devs

./: .gitignore  LICENSE  README.md  SETUP.md  ex_01_first_query.py  ex_02_generate_practice_data.py  extract_from_blog.py  pyproject.toml
data/: logs.parquet  sales.csv
docs/: BLOG_HOOK_SETUP.md
helpers/: __init__.py  db.py
scripts/: verify-blog-examples.sh
scripts/hooks/: pre-push
test/: conftest.py  test_01_run_your_first_sql_query.py  test_02_generate_practice_data.py  test_db_helpers.py  test_exercises.py  test_sql_queries.py
