[project]
name = "sql-for-python-devs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "faker>=40.1.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = "."
